@@ -1,25 +1,13 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.script.mustache;
 
-import com.fasterxml.jackson.core.io.JsonStringEncoder;
 import com.github.mustachejava.Code;
 import com.github.mustachejava.DefaultMustacheFactory;
 import com.github.mustachejava.DefaultMustacheVisitor;
@@ -30,8 +18,11 @@ import com.github.mustachejava.TemplateContext;
 import com.github.mustachejava.codes.DefaultMustache;
 import com.github.mustachejava.codes.IterableCode;
 import com.github.mustachejava.codes.WriteCode;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentType;
+
+import org.elasticsearch.common.Strings;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xcontent.json.JsonStringEncoder;
 
 import java.io.IOException;
 import java.io.StringWriter;
@@ -39,7 +30,6 @@ import java.io.Writer;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -49,35 +39,38 @@ import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class CustomMustacheFactory extends DefaultMustacheFactory {
+public final class CustomMustacheFactory extends DefaultMustacheFactory {
+    static final String V7_JSON_MEDIA_TYPE_WITH_CHARSET = "application/json; charset=UTF-8";
+    static final String JSON_MEDIA_TYPE_WITH_CHARSET = "application/json;charset=utf-8";
+    static final String JSON_MEDIA_TYPE = "application/json";
+    static final String PLAIN_TEXT_MEDIA_TYPE = "text/plain";
+    static final String X_WWW_FORM_URLENCODED_MEDIA_TYPE = "application/x-www-form-urlencoded";
 
-    static final String JSON_MIME_TYPE_WITH_CHARSET = "application/json; charset=UTF-8";
-    static final String JSON_MIME_TYPE = "application/json";
-    static final String PLAIN_TEXT_MIME_TYPE = "text/plain";
-    static final String X_WWW_FORM_URLENCODED_MIME_TYPE = "application/x-www-form-urlencoded";
+    private static final String DEFAULT_MEDIA_TYPE = JSON_MEDIA_TYPE;
 
-    private static final String DEFAULT_MIME_TYPE = JSON_MIME_TYPE;
-
-    private static final Map<String, Supplier<Encoder>> ENCODERS;
-    static {
-        Map<String, Supplier<Encoder>> encoders = new HashMap<>();
-        encoders.put(JSON_MIME_TYPE_WITH_CHARSET, JsonEscapeEncoder::new);
-        encoders.put(JSON_MIME_TYPE, JsonEscapeEncoder::new);
-        encoders.put(PLAIN_TEXT_MIME_TYPE, DefaultEncoder::new);
-        encoders.put(X_WWW_FORM_URLENCODED_MIME_TYPE, UrlEncoder::new);
-        ENCODERS = Collections.unmodifiableMap(encoders);
-    }
+    private static final Map<String, Supplier<Encoder>> ENCODERS = Map.of(
+        V7_JSON_MEDIA_TYPE_WITH_CHARSET,
+        JsonEscapeEncoder::new,
+        JSON_MEDIA_TYPE_WITH_CHARSET,
+        JsonEscapeEncoder::new,
+        JSON_MEDIA_TYPE,
+        JsonEscapeEncoder::new,
+        PLAIN_TEXT_MEDIA_TYPE,
+        DefaultEncoder::new,
+        X_WWW_FORM_URLENCODED_MEDIA_TYPE,
+        UrlEncoder::new
+    );
 
     private final Encoder encoder;
 
-    public CustomMustacheFactory(String mimeType) {
+    public CustomMustacheFactory(String mediaType) {
         super();
         setObjectHandler(new CustomReflectionObjectHandler());
-        this.encoder = createEncoder(mimeType);
+        this.encoder = createEncoder(mediaType);
     }
 
     public CustomMustacheFactory() {
-        this(DEFAULT_MIME_TYPE);
+        this(DEFAULT_MEDIA_TYPE);
     }
 
     @Override
@@ -89,10 +82,10 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
         }
     }
 
-    static Encoder createEncoder(String mimeType) {
-        Supplier<Encoder> supplier = ENCODERS.get(mimeType);
+    static Encoder createEncoder(String mediaType) {
+        final Supplier<Encoder> supplier = ENCODERS.get(mediaType);
         if (supplier == null) {
-            throw new IllegalArgumentException("No encoder found for MIME type [" + mimeType + "]");
+            throw new IllegalArgumentException("No encoder found for media type [" + mediaType + "]");
         }
         return supplier.get();
     }
@@ -201,11 +194,9 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
                     return null;
                 }
                 try (XContentBuilder builder = XContentBuilder.builder(XContentType.JSON.xContent())) {
-                    if (resolved == null) {
-                        builder.nullValue();
-                    } else if (resolved instanceof Iterable) {
+                    if (resolved instanceof Iterable) {
                         builder.startArray();
-                        for (Object o : (Iterable) resolved) {
+                        for (Object o : (Iterable<?>) resolved) {
                             builder.value(o);
                         }
                         builder.endArray();
@@ -215,7 +206,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
                         // Do not handle as JSON
                         return oh.stringify(resolved);
                     }
-                    return builder.string();
+                    return Strings.toString(builder);
                 } catch (IOException e) {
                     throw new MustacheException("Failed to convert object to JSON", e);
                 }
@@ -253,7 +244,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
                     return null;
                 } else if (resolved instanceof Iterable) {
                     StringJoiner joiner = new StringJoiner(delimiter);
-                    for (Object o : (Iterable) resolved) {
+                    for (Object o : (Iterable<?>) resolved) {
                         joiner.add(oh.stringify(o));
                     }
                     return joiner.toString();
@@ -269,7 +260,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
 
     static class CustomJoinerCode extends JoinerCode {
 
-        private static final Pattern PATTERN = Pattern.compile("^(?:" + CODE + " delimiter='(.*)')$");
+        private static final Pattern PATTERN = Pattern.compile("^" + CODE + " delimiter='(.*)'$");
 
         CustomJoinerCode(TemplateContext tc, DefaultMustacheFactory df, Mustache mustache, String variable) {
             super(tc, df, mustache, extractDelimiter(variable));
@@ -366,7 +357,7 @@ public class CustomMustacheFactory extends DefaultMustacheFactory {
 
         @Override
         public void encode(String s, Writer writer) throws IOException {
-            writer.write(URLEncoder.encode(s, StandardCharsets.UTF_8.name()));
+            writer.write(URLEncoder.encode(s, StandardCharsets.UTF_8));
         }
     }
 }
