@@ -1,43 +1,30 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.test;
 
+import org.elasticsearch.Build;
 import org.elasticsearch.Version;
-import org.elasticsearch.common.Nullable;
-import org.elasticsearch.common.collect.Tuple;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.Tuple;
 
-import java.lang.reflect.Field;
-import java.lang.reflect.Modifier;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
 import java.util.stream.Collectors;
-
-import static java.util.Collections.singletonList;
-import static java.util.Collections.unmodifiableList;
+import java.util.stream.Stream;
 
 /** Utilities for selecting versions in tests */
 public class VersionUtils {
+
     /**
      * Sort versions that have backwards compatibility guarantees from
      * those that don't. Doesn't actually check whether or not the versions
@@ -49,64 +36,77 @@ public class VersionUtils {
      * guarantees in v1 and versions without the guranteees in v2
      */
     static Tuple<List<Version>, List<Version>> resolveReleasedVersions(Version current, Class<?> versionClass) {
-        Field[] fields = versionClass.getFields();
-        List<Version> versions = new ArrayList<>(fields.length);
-        for (final Field field : fields) {
-            final int mod = field.getModifiers();
-            if (false == Modifier.isStatic(mod) && Modifier.isFinal(mod) && Modifier.isPublic(mod)) {
-                continue;
-            }
-            if (field.getType() != Version.class) {
-                continue;
-            }
-            if ("CURRENT".equals(field.getName())) {
-                continue;
-            }
-            assert field.getName().matches("V(_\\d+)+(_(alpha|beta|rc)\\d+)?") : field.getName();
-            try {
-                versions.add(((Version) field.get(null)));
-            } catch (final IllegalAccessException e) {
-                throw new RuntimeException(e);
-            }
-        }
-        Collections.sort(versions);
-        Version last = versions.remove(versions.size() - 1);
-        assert last.equals(current) : "The highest version must be the current one "
-            + "but was [" + versions.get(versions.size() - 1) + "] and current was [" + current + "]";
+        // group versions into major version
+        Map<Integer, List<Version>> majorVersions = Version.getDeclaredVersions(versionClass)
+            .stream()
+            .collect(Collectors.groupingBy(v -> (int) v.major));
+        // this breaks b/c 5.x is still in version list but master doesn't care about it!
+        // assert majorVersions.size() == 2;
+        // TODO: remove oldVersions, we should only ever have 2 majors in Version
+        List<List<Version>> oldVersions = splitByMinor(majorVersions.getOrDefault((int) current.major - 2, Collections.emptyList()));
+        List<List<Version>> previousMajor = splitByMinor(majorVersions.get((int) current.major - 1));
+        List<List<Version>> currentMajor = splitByMinor(majorVersions.get((int) current.major));
 
-        if (current.revision != 0) {
-            /* If we are in a stable branch there should be no unreleased version constants
-             * because we don't expect to release any new versions in older branches. If there
-             * are extra constants then gradle will yell about it. */
-            return new Tuple<>(unmodifiableList(versions), singletonList(current));
+        List<Version> unreleasedVersions = new ArrayList<>();
+        final List<List<Version>> stableVersions;
+        if (currentMajor.size() == 1) {
+            // on master branch
+            stableVersions = previousMajor;
+            // remove current
+            moveLastToUnreleased(currentMajor, unreleasedVersions);
+        } else {
+            // on a stable or release branch, ie N.x
+            stableVersions = currentMajor;
+            // remove the next maintenance bugfix
+            moveLastToUnreleased(previousMajor, unreleasedVersions);
         }
 
-        /* If we are on a patch release then we know that at least the version before the
-         * current one is unreleased. If it is released then gradle would be complaining. */
-        int unreleasedIndex = versions.size() - 1;
-        while (true) {
-            if (unreleasedIndex < 0) {
-                throw new IllegalArgumentException("Couldn't find first non-alpha release");
+        // remove next minor
+        Version lastMinor = moveLastToUnreleased(stableVersions, unreleasedVersions);
+        if (lastMinor.revision == 0) {
+            if (stableVersions.get(stableVersions.size() - 1).size() == 1) {
+                // a minor is being staged, which is also unreleased
+                moveLastToUnreleased(stableVersions, unreleasedVersions);
             }
-            /* We don't support backwards compatibility for alphas, betas, and rcs. But
-             * they were released so we add them to the released list. Usually this doesn't
-             * matter to consumers, but consumers that do care should filter non-release
-             * versions. */
-            if (versions.get(unreleasedIndex).isRelease()) {
-                break;
+            // remove the next bugfix
+            if (stableVersions.isEmpty() == false) {
+                moveLastToUnreleased(stableVersions, unreleasedVersions);
             }
-            unreleasedIndex--;
         }
 
-        Version unreleased = versions.remove(unreleasedIndex);
-        if (unreleased.revision == 0) {
-            /* If the last unreleased version is itself a patch release then gradle enforces
-             * that there is yet another unreleased version before that. */
-            unreleasedIndex--;
-            Version earlierUnreleased = versions.remove(unreleasedIndex);
-            return new Tuple<>(unmodifiableList(versions), unmodifiableList(Arrays.asList(earlierUnreleased, unreleased, current)));
+        // If none of the previous major was released, then the last minor and bugfix of the old version was not released either.
+        if (previousMajor.isEmpty()) {
+            assert currentMajor.isEmpty() : currentMajor;
+            // minor of the old version is being staged
+            moveLastToUnreleased(oldVersions, unreleasedVersions);
+            // bugix of the old version is also being staged
+            moveLastToUnreleased(oldVersions, unreleasedVersions);
         }
-        return new Tuple<>(unmodifiableList(versions), unmodifiableList(Arrays.asList(unreleased, current)));
+        List<Version> releasedVersions = Stream.of(oldVersions, previousMajor, currentMajor)
+            .flatMap(List::stream)
+            .flatMap(List::stream)
+            .collect(Collectors.toList());
+        Collections.sort(unreleasedVersions); // we add unreleased out of order, so need to sort here
+        return new Tuple<>(Collections.unmodifiableList(releasedVersions), Collections.unmodifiableList(unreleasedVersions));
+    }
+
+    // split the given versions into sub lists grouped by minor version
+    private static List<List<Version>> splitByMinor(List<Version> versions) {
+        Map<Integer, List<Version>> byMinor = versions.stream().collect(Collectors.groupingBy(v -> (int) v.minor));
+        return byMinor.entrySet().stream().sorted(Map.Entry.comparingByKey()).map(Map.Entry::getValue).collect(Collectors.toList());
+    }
+
+    // move the last version of the last minor in versions to the unreleased versions
+    private static Version moveLastToUnreleased(List<List<Version>> versions, List<Version> unreleasedVersions) {
+        List<Version> lastMinor = new ArrayList<>(versions.get(versions.size() - 1));
+        Version lastVersion = lastMinor.remove(lastMinor.size() - 1);
+        if (lastMinor.isEmpty()) {
+            versions.remove(versions.size() - 1);
+        } else {
+            versions.set(versions.size() - 1, lastMinor);
+        }
+        unreleasedVersions.add(lastVersion);
+        return lastVersion;
     }
 
     private static final List<Version> RELEASED_VERSIONS;
@@ -121,7 +121,7 @@ public class VersionUtils {
         allVersions.addAll(RELEASED_VERSIONS);
         allVersions.addAll(UNRELEASED_VERSIONS);
         Collections.sort(allVersions);
-        ALL_VERSIONS = unmodifiableList(allVersions);
+        ALL_VERSIONS = Collections.unmodifiableList(allVersions);
     }
 
     /**
@@ -178,7 +178,7 @@ public class VersionUtils {
                 return v;
             }
         }
-        throw new IllegalArgumentException("couldn't find any released versions of the minor before [" + Version.CURRENT + "]");
+        throw new IllegalArgumentException("couldn't find any released versions of the minor before [" + Build.current().version() + "]");
     }
 
     /** Returns the oldest released {@link Version} */
@@ -193,7 +193,7 @@ public class VersionUtils {
 
     /** Returns a random {@link Version} from all available versions, that is compatible with the given version. */
     public static Version randomCompatibleVersion(Random random, Version version) {
-        final List<Version> compatible = ALL_VERSIONS.stream().filter(version::isCompatible).collect(Collectors.toList());
+        final List<Version> compatible = ALL_VERSIONS.stream().filter(version::isCompatible).toList();
         return compatible.get(random.nextInt(compatible.size()));
     }
 
@@ -220,19 +220,17 @@ public class VersionUtils {
         }
     }
 
-    /** returns the first future incompatible version */
-    public static Version incompatibleFutureVersion(Version version) {
-        final Optional<Version> opt = ALL_VERSIONS.stream().filter(version::before).filter(v -> v.isCompatible(version) == false).findAny();
-        assert opt.isPresent() : "no future incompatible version for " + version;
+    /** returns the first future compatible version */
+    public static Version compatibleFutureVersion(Version version) {
+        final Optional<Version> opt = ALL_VERSIONS.stream().filter(version::before).filter(v -> v.isCompatible(version)).findAny();
+        assert opt.isPresent() : "no future compatible version for " + version;
         return opt.get();
     }
 
     /** Returns the maximum {@link Version} that is compatible with the given version. */
     public static Version maxCompatibleVersion(Version version) {
-        final List<Version> compatible = ALL_VERSIONS.stream().filter(version::isCompatible).filter(version::onOrBefore)
-            .collect(Collectors.toList());
+        final List<Version> compatible = ALL_VERSIONS.stream().filter(version::isCompatible).filter(version::onOrBefore).toList();
         assert compatible.size() > 0;
         return compatible.get(compatible.size() - 1);
     }
-
 }
